<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/poll_ques_text"
        android:layout_width="match_parent"
        android:padding="15dp"
        android:textSize="15dp"
        android:background="@drawable/poll_ques_bg"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/poll_options_list"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/vote_button"
        android:background="@drawable/poll_ques_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vote Again?"
        android:textColor="@color/white"
        android:enabled="false"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

</LinearLayout>